Deleted upvote script

--- a/reddit_bot.json.EXAMPLE
+++ b/reddit_bot.json.EXAMPLE
@@ -1,6 +1,6 @@
 {
-	"APP_KEY":"YOUR_APP_KEY",
-	"APP_SECRET":"YOUR_APP_SECRET",
-	"USERNAME":"YOUR_USERNAME",
-	"PASSWORD":"YOUR_PASSWORD"
+	"APP_KEY":"APP_KEY",
+	"APP_SECRET":"APP_SECRET",
+	"USERNAME":"acc_username",
+	"PASSWORD":"acc_password"
 }
